<resources>
    <string name="app_name">SimplyLift</string>
    <string name="imageHome_description">Content Description</string>
    <string name="next">next</string>
    <string name="SimplyLift">SimplyLift</string>
    <string name="second_activity_page">SimplyLift</string>
    <string name="add_workout">add workout</string>
    <string name="Settings">Settings</string>
    <string name="Home">Home</string>
    <string name="notifications">notifications</string>
    <string name="menu">menu</string>
    <string name="enter_number_of_sets">Enter number of sets</string>
    <string name="create_new_workout">Create New Workout</string>
    <string name="name_of_workout">Name of Workout:</string>
    <string name="enter_name_of_workout">Enter name of workout</string>
    <string name="enter_new_exercise">Add new exercise to your workout:</string>
    <string name="enter_name_of_exercise">Enter the name of exercise</string>
    <string name="enter_number_of_reps">Enter the number of reps</string>
    <string name="submit">Submit</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="preferences">Preferences</string>
    <string name="end_user_licence_agreement">End User Licence Agreement</string>
    <string name="goals">Goals</string>
    <string name="nutrition">Nutrition</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="create_n_new_workout_t">Create\n New Workout\t</string>
    <string name="edit_workout">Edit\n Workout\t</string>
    <string name="delete_loaded_workout">Delete\n Loaded Workout\t</string>
    <string name="deletion_note">To delete an exercise push and hold on the desired exercise on the list</string>
    <string name="Back">Back</string>
    <string name="back">BACK</string>
    <string name="home">HOME</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
    <string name="editworkout">TODO</string>
    <string name="timer">Timer</string>
    <string name="app_name2">GFG|Stopwatch</string>

    <!--end user license agreement strings-->
    <string name="eula">End User License Agreement</string>
    <string name="eulaParagraph">This End User License Agreement (EULA) is a legal agreement between you, the user, and us, the developers of this app as well as all affiliates.By using our app, SimplyLift, the user agrees to the following:
We, the developers, which are the people who have worked on this app prior to public release, claim all legal and property rights to SimplyLift.We are not responsible for anything that happens to devices running the app. All uses of the app must be for legal purposes. Any intent to use this software for illegal and/or unethical purposes is restricted. Illegal usage will result in revocation of your license to use this app, and all services provided to you by this app will be terminated immediately.</string>

    <!--user profile strings-->
    <string name="profile1">User Profile</string>
    <string name="confirm">confirm</string>
    <string name="type_your_weight">Type your weight</string>
    <string name="type_your_age">type your age</string>
    <string name="simplylogo">TODO</string>

    <!--strings for bodyweight exercises-->
    <string name="basicBody1">Bodyweight exercises</string>
    <string name="basicBody2">Basic bodyweight exercises</string>
    <string name="basicBody3">Below are descriptions for common bodyweight exercises</string>
    <string name="basicBody4">Pushups: Enter plank position on all fours and tighten core. Lower body until chest skims floor. Pause and push body back up. Focus on activating core and back muscles. </string>
    <string name="basicBody5">Pullups: Grasp a pullup bar with overhand grip shoulder width apart. Pull body upwards while squeezing lats and core until chin is above the bar. Pause, then slowly lower back to starting position. </string>
    <string name="basicBody6">Squats: Stand tall with tight core, then squat down. Then push weight through heels to stand back upright. </string>
    <string name="basicBody7">Crunches: Lie on back with bent knees and feet hip width apart on floor. Contract abs and lift upper body, pause, and return down.  </string>

    <!--strings for weighted exercises-->
    <string name="basicWeight1">Weighted exercises</string>
    <string name="basicWeight2">Basic weighted exercises</string>
    <string name="basicWeight3">Below are descriptions for common weighted exercises</string>
    <string name="basicWeight4">Squats: Tighten core and stand tall with chest up. Hold barbell across back of your shoulders. Squat down as low as possible, then focus on pushing weight through heels to stand back upright. </string>
    <string name="basicWeight5">Bench press: Lie flat on bench with barbell on chest, gripped at shoulder width. Push bar straight upwards, maintaining strong wrists. </string>
    <string name="basicWeight6">Push press: Stand tall with a tight core and hold barbell across front of shoulders. Bend knees and then push through heels to stand upright while pushing barbell directly overhead. Slowly lower barbell back to shoulders. </string>
    <string name="basicWeight7">Lunges: Same as squat form, but stepping one leg back on the way down. </string>

    <!--stopwatch strings-->
    <string name="startS">Start</string>
    <string name="stopS">Stop</string>
    <string name="resetS">Reset</string>

    <!--beginner information screen strings-->
    <string name="Info1">Beginner Information</string>
    <string name="Info2">This app is best suited for intermediate to advanced level athletes. The following information is advice for beginners that are building a foundation. "</string>
    <string name="Info4">⦾ For building muscle mass, use higher weights and lower repetitions. For building leaner muscle and endurance, use higher weights and lower repetitions."</string>
    <string name="Info3">⦾ For each exercise, try to use a weight that you can repeat for 3 sets of 8-12 repetitions that challenges you."</string>
    <string name="Info5">⦾ Do not challenge yourself beyond reason: Always ensure that the weight you are using is within you capabilities or use an experienced spotter. "</string>

    <!--time calculator strings-->
    <string name="timeCalc1">Time calculator</string>
    <string name="timeCalc2">Use this tool to calculate approximately how many exercises you can complete in the time you have to exercise. Enter the hours and minutes you have available in your schedule. </string>
    <string name="timeCalc3">Hours: </string>
    <string name="timeCalc4">Minutes: </string>
    <string name="timeCalc5">The number of exercises you have time for today: </string>
    <string name="timeCalc6">Calculate </string>
    <string name="timeCalc7">This value is based on the assumptions of 3 sets of 10 repetitions of 4 seconds each, with a 90 second rest time between each set. </string>

</resources>
