<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Profile"
android:background="@drawable/gradient1">

<Button
    android:id="@+id/confirmBttn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="161dp"
    android:layout_marginLeft="161dp"
    android:layout_marginTop="391dp"
    android:layout_marginEnd="162dp"
    android:layout_marginRight="162dp"
    android:layout_marginBottom="292dp"
    android:text="@string/confirm"
    android:textColor="@android:color/holo_blue_dark"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/rounded_edges"/>

<EditText
    android:id="@+id/editTextWeight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginLeft="100dp"
    android:layout_marginTop="102dp"
    android:layout_marginEnd="101dp"
    android:layout_marginRight="101dp"
    android:layout_marginBottom="584dp"
    android:ems="10"
    android:hint="@string/type_your_weight"
    android:inputType="numberSigned"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:autofillHints=""
    android:background="@drawable/rounded_edges"/>

<EditText
    android:id="@+id/ageEditText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginLeft="100dp"
    android:layout_marginTop="255dp"
    android:layout_marginEnd="101dp"
    android:layout_marginRight="101dp"
    android:layout_marginBottom="431dp"
    android:ems="10"
    android:hint="@string/type_your_age"
    android:inputType="number"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:autofillHints=""
    android:background="@drawable/rounded_edges"
    />

    <TextView
        android:id="@+id/profileTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_edges"
        android:fontFamily="@font/share_tech_mono"
        android:text="@string/profile1"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="45sp"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="27dp"
        tools:layout_marginTop="20dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/profileHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edges"
        android:fontFamily="@font/share_tech_mono"
        android:onClick="onClickHome"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/Home"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="477dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>


